--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
       <div class="articles-list__item">
         <div class="title"><a href="{{ path }}">{{ title }}</a></div>
         <div class="date">{{ date }}</div>
-        <div class="content">{{ excerpt }}</div>
+        <div class="content">{{{ excerpt }}}</div>
       </div>
     {{/each}}
     </div>
