--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
     <title>{{#if title }}{ {title }} - {{/if}}{{ site.name }}</title>
     <meta name="description" content="{{#if blurb}}{{ blurb }}{{else}}{{#if description}}{{ description }}{{else}}{{ site.description }}{{/if}}{{/if}}" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
