--- a/layouts/article.html
+++ b/layouts/article.html
@@ -9,6 +9,8 @@
           {{#if date}}Published: {{ date }}{{/if}}
       </div>
       {{{ contents }}}
+
+      {{> comments }}
     </article>
 
 {{> footer }}
