--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,19 @@
-        <nav>---<br /><a href="/about">About this blog</a></nav> 
+      
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"></script>
+    <script>
+
+        var messages = [
+            "Hi<br>",
+            "Hi<br><span>I'm <strong>Frederik</strong>, a passionate <strong>JavaScript</strong> developer.</span>",
+            "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>Angular</strong> enthousiast.</span>",
+            "Hi<br><span>I'm <strong>Frederik</strong>, a <strong>coach</strong>.</span>",
+            "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>open-source</strong> lover.</span>"
+        ];
+        var typed = new Typed(".typed-placeholder", {
+            typeSpeed: 30,
+            strings: messages,
+            smartBackspace: true
+        });
+    </script>
     </body>  
 </html>
