--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,10 @@
 @import 'partials/variables';
 @import 'partials/articles';
 
+html {
+
+   height: 100%;
+}
 body {
     background-color: $background-color;
     color: #818181;
@@ -9,6 +13,7 @@ body {
 
 body {
    font-family:  'Lato', Calibri, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+   height: 100%;
 }
 
 .read-more {
@@ -29,11 +34,70 @@ body {
 .content-wrapper {
     padding-left: 30px;
     padding-right: 30px;
+
+    &.content-wrapper--fullscreen {
+        padding-left: 0;
+        padding-right: 0;
+        position: relative;
+        background: #333;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+
+        a, a:hover, a:active {
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        &:before {
+            background-image: url("../images/bg.jpeg");
+            content: ' ';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            opacity: 0.4;
+            background-repeat: no-repeat;
+            background-position: 50% 0;
+            background-size: cover;
+        }
+
+        .content {
+            height: 100%;
+            width: 100%;
+            display: table;
+
+            > div, > footer {
+                display: table-row;
+            }
+
+            > div {
+                height: 100%;
+            }
+
+            > footer {
+                height: 50px;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
+
+        .content__footer {
+            display: table-cell;
+        }
+    }
 }
 
 .content {
     max-width: 1200px;
     margin: 0 auto;
+    z-index: 2;
+    position: relative;
+    opacity: 0.8;
 
     &:after {
         content: '';
@@ -45,9 +109,30 @@ body {
 .content__main {
     width: 75%;
     float: left;
+
+    &.content__main--centered {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        display: table-cell;
+        vertical-align: middle;
+        float: none;
+        font-size: 18px;
+    }
 }
 
 .content__aside {
     width: 21%;
     float: left;
+}
+
+.social-icons {
+    margin-top: 20px;
+
+    i {
+        padding: 10px;
+        margin-right: 5px;
+        margin-left: 5px;
+        border: 2px solid #fff;
+    }
 }
