--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,21 @@
 {{> header}}
-    <div class="content-wrapper content-wrapper--fullscreen" >
-        <div class="content">
-            <div>
-                <main class="content__main content__main--centered">
-                    <div class="typed-placeholder" style="white-space:pre; display:inline;"></div>
-                    <div class="social-icons">
-                        <i class="fa fa-rss fa-2x"></i>
-                        <i class="fa fa-github fa-2x"></i>
-                        <i class="fa fa-twitter fa-2x"></i>
-                        <i class="fa fa-linkedin fa-2x"></i>
-                    </div>
-                </main>
+    
+
+    <div class="flex-wrapper">
+        <div class="flex-content">
+            <div class="content__center">
+                <div class="typed-placeholder" style="white-space:pre; display:inline;">
+                </div>
+                <div class="social-icons">
+                    <i class="fa fa-rss fa-2x"></i>
+                    <i class="fa fa-github fa-2x"></i>
+                    <i class="fa fa-twitter fa-2x"></i>
+                    <i class="fa fa-linkedin fa-2x"></i>
+                </div>
             </div>
-            <footer class="content__footer">
-                <span>Made with <a href="http://www.metalsmith.io/" target="_blank">Metalsmith</a>, available on <a href="https://github.com/frederikprijck/blog" target="_blank">Github</a><span>
-            </footer> 
+        </div>
+        <div class="flex-footer">
+            <span>Made with <a href="http://www.metalsmith.io/" target="_blank">Metalsmith</a>, available on <a href="https://github.com/frederikprijck/blog" target="_blank">Github</a><span>
         </div>
     </div>
 
