--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,19 +1,16 @@
 @import 'partials/variables';
 @import 'partials/articles';
 
-html {
-
-   height: 100%;
-}
 body {
     background-color: $background-color;
     color: #818181;
     line-height: 1.66667;
+    margin: 0;
+    padding: 0;
 }
 
 body {
    font-family:  'Lato', Calibri, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-   height: 100%;
 }
 
 .read-more {
@@ -34,62 +31,6 @@ body {
 .content-wrapper {
     padding-left: 30px;
     padding-right: 30px;
-
-    &.content-wrapper--fullscreen {
-        padding-left: 0;
-        padding-right: 0;
-        position: relative;
-        background: #333;
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        color: #fff;
-
-        a, a:hover, a:active {
-            color: #fff;
-            text-decoration: underline;
-        }
-
-        &:before {
-            background-image: url("../images/bg.jpeg");
-            content: ' ';
-            display: block;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            opacity: 0.4;
-            background-repeat: no-repeat;
-            background-position: 50% 0;
-            background-size: cover;
-        }
-
-        .content {
-            height: 100%;
-            width: 100%;
-            display: table;
-
-            > div, > footer {
-                display: table-row;
-            }
-
-            > div {
-                height: 100%;
-            }
-
-            > footer {
-                height: 50px;
-                text-align: center;
-                vertical-align: middle;
-            }
-        }
-
-        .content__footer {
-            display: table-cell;
-        }
-    }
 }
 
 .content {
@@ -109,16 +50,6 @@ body {
 .content__main {
     width: 75%;
     float: left;
-
-    &.content__main--centered {
-        width: 100%;
-        text-align: center;
-        position: relative;
-        display: table-cell;
-        vertical-align: middle;
-        float: none;
-        font-size: 18px;
-    }
 }
 
 .content__aside {
@@ -135,4 +66,57 @@ body {
         margin-left: 5px;
         border: 2px solid #fff;
     }
+}
+
+html, body, .flex-wrapper{ height: 100%; }
+
+.flex-wrapper {
+    display: flex; 
+    flex-direction: column; 
+    text-align:center;
+    position: relative;
+    background-color: #333;
+
+    &:before {
+        content: '';
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        background-image: url('../images/bg.jpeg');
+        background-repeat: no-repeat;
+        background-position: 50% 0;
+        background-size: cover;
+        opacity: 0.4;
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        box-shadow: inset 0 0 0 6px #fff;
+    }
+    &, a {
+        color: #fff;
+    }
+}
+
+.flex-content{ 
+    flex-grow:1; 
+    display:flex; 
+    flex-direction: column; 
+    justify-content: center;
+    z-index: 1;
+}
+
+.flex-footer{ 
+    flex: 0;
+    z-index: 1;
+    margin-bottom: 30px;
 }
