--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
         var messages = [
             "Hi<br>",
             "Hi<br><span>I'm <strong>Frederik</strong>, a passionate <strong>JavaScript</strong> developer.</span>",
-            "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>Angular, Webpack and RxJS</strong> enthousiast.</span>",
+            "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>Angular, Webpack</strong> and <strong>RxJS</strong> enthousiast.</span>",
             "Hi<br><span>I'm <strong>Frederik</strong>, a <strong>coach</strong>.</span>",
             "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>open-source</strong> lover.</span>"
         ];
