--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -1,3 +1,18 @@
+.read-more {
+    margin-top: 40px;
+
+    .more-link {
+        background-color: #2b3a4c;
+        font-size: 12px;
+        letter-spacing: 1;
+        text-transform: uppercase;
+        color: #fff;
+        font-weight: bold;
+        padding: 8px 15px;
+        text-decoration: none;
+    }
+}
+
 .entry {
     background-color: #fff;
     margin-bottom: 60px;
