--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import 'partials/variables';
 @import 'partials/articles';
+@import 'partials/splash';
 
 body {
     background-color: $background-color;
@@ -13,114 +14,5 @@ body {
    font-family:  'Lato', Calibri, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.read-more {
-    margin-top: 40px;
+html, body { height: 100%; }
 
-    .more-link {
-        background-color: #2b3a4c;
-        font-size: 12px;
-        letter-spacing: 1;
-        text-transform: uppercase;
-        color: #fff;
-        font-weight: bold;
-        padding: 8px 15px;
-        text-decoration: none;
-    }
-}
-
-.content-wrapper {
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.content {
-    max-width: 1200px;
-    margin: 0 auto;
-    z-index: 2;
-    position: relative;
-    opacity: 0.8;
-
-    &:after {
-        content: '';
-        display: table;
-        clear: both;
-    }
-}
-
-.content__main {
-    width: 75%;
-    float: left;
-}
-
-.content__aside {
-    width: 21%;
-    float: left;
-}
-
-.social-icons {
-    margin-top: 20px;
-
-    i {
-        padding: 10px;
-        margin-right: 5px;
-        margin-left: 5px;
-        border: 2px solid #fff;
-    }
-}
-
-html, body, .flex-wrapper{ height: 100%; }
-
-.flex-wrapper {
-    display: flex; 
-    flex-direction: column; 
-    text-align:center;
-    position: relative;
-    background-color: #333;
-
-    &:before {
-        content: '';
-        display: block;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        left: 5px;
-        top: 5px;
-        background-image: url('../images/bg.jpeg');
-        background-repeat: no-repeat;
-        background-position: 50% 0;
-        background-size: cover;
-        opacity: 0.4;
-    }
-
-    &:after {
-        content: '';
-        display: block;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        box-shadow: inset 0 0 0 6px #fff;
-    }
-    &, a {
-        color: #fff;
-    }
-}
-
-.flex-content{ 
-    flex-grow:1; 
-    display:flex; 
-    flex-direction: column; 
-    justify-content: center;
-    z-index: 1;
-
-    strong {
-        color: #b6d169;
-    }
-}
-
-.flex-footer{ 
-    flex: 0;
-    z-index: 1;
-    margin-bottom: 30px;
-}
