--- a/layouts/partials/splash.html
+++ b/layouts/partials/splash.html
@@ -1,7 +1,7 @@
 <div class="splash-wrapper">
     <div class="splash-content">
         <div class="content__center">
-            <div class="typed-placeholder" style="white-space:pre; display:inline;">
+            <div class="typed-placeholder" style="white-space:pre; display:inline-block;">
             </div>
             <div class="social-icons">
                 <i class="fa fa-rss fa-2x"></i>
