--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{#if title }}{ {title }} - {{/if}}{{ site.name }}</title>
     <meta name="description" content="{{#if blurb}}{{ blurb }}{{else}}{{#if description}}{{ description }}{{else}}{{ site.description }}{{/if}}{{/if}}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
