--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import 'partials/variables';
 @import 'partials/articles';
 @import 'partials/splash';
+@import 'partials/general';
 
 html, body { height: 100%; }
 
