--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -15,7 +15,8 @@
 
 .entry {
     background-color: #fff;
-    margin-bottom: 60px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding-bottom: 40px;
 
     .entry__header {
