--- a/layouts/partials/articles.html
+++ b/layouts/partials/articles.html
@@ -10,10 +10,10 @@
                     by <span class="post-author">{{ author }}</span> on <time class="published" datetime="2017-01-18">{{ date }}</time>
                 </div><!-- .entry-meta -->
             </header>
-            <div class="entry__content">
+            <main class="entry__content">
                 {{{ excerpt }}}
                 <p class="read-more"><a href="{{ path }}" class="more-link" title="read more">read more</a></p>
-            </div>
+            </main>
             <footer class="entry__footer">
                 <div class="tag-links">
                     Tags: 
