--- a/layouts/about.html
+++ b/layouts/about.html
@@ -6,13 +6,13 @@
         <header class="header">
           <a href="/">Home</a>
           <nav>
-              <a href="about">About</a>
-              <a href="about">Contact</a>
+              <a href="/about">About</a>
+              <a href="/contact">Contact</a>
           </nav>
         </header>
         <main>
           <!-- todo: move to index.md -->
-          {{> articles }}
+          {{ contents }}
         </main>
       </div>
     </div>
