--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,4 +1,4 @@
-<div class="article_comments">
+<div class="comments">
 	<div id="disqus_thread"></div>
 	<script>
 	var disqus_config = function () {
