--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -1,18 +1,34 @@
-.content-wrapper {
+.blog-wrapper {
     display: flex; 
     flex-direction: column;
     align-items: center;
 }
 
-.content {
+
+.blog {
   max-width: 1200px;
   padding-top: 30px;
   padding-bottom: 60px;
+
+  flex-grow:1; 
+  display:flex; 
+  flex-direction: column; 
+  justify-content: center;
 }
 
-.content{ 
-    flex-grow:1; 
-    display:flex; 
-    flex-direction: column; 
-    justify-content: center;
+.header {
+  display: flex;
+  nav {
+    margin-left: auto;
+    a {
+      display: inline-block;
+      color: #fff;
+      text-decoration: none;
+      font-size: 36px;
+    }
+  }
+}
+
+.comments {
+  padding: 50px 50px 0 50px;
 }
