--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,7 +7,7 @@ html, body { height: 100%; }
 
 body {
     background-color: $background-color;
-    color: #818181;
+    color: $text-color;
     line-height: 1.66667;
     margin: 0;
     padding: 0;
