--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -14,18 +14,16 @@
 }
 
 .entry {
-    background-color: #fff;
+    max-width: 740px;
     margin-top: 30px;
     margin-bottom: 30px;
+    padding: 20px;
     padding-bottom: 40px;
 
     .entry__header {
         margin-bottom: 40px;
 
         .entry__header__title h2 {
-            padding: 30px;
-            background-color: #1a232e;
-            color: #fff;
             display: inline-block;
             margin-left: 0;
             margin-top: 0;
@@ -33,32 +31,26 @@
             font-size: 36px;
 
             a {
-                color: #fff;
+                color: $text-color;
                 text-decoration: none;
             }
         }
 
         .entry__header__meta {
-            background-color: #ed4f50;
-            padding: 16px 30px;
             text-transform: uppercase;
             letter-spacing: 1;
-            color: #fff;
             display: inline-block;
             font-size: 12px;
         }
     }
 
     .entry__content {
-        padding-right: 50px;
-        padding-left: 50px;
         font-size: 18px;
         padding-bottom: 18px;
     }
 
     .entry__footer {
         text-transform: uppercase;
-        padding-left: 50px;
         font-size: 11px;
         margin-top: 30px;
 
