--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -7,7 +7,6 @@
 
 .blog {
   max-width: 1200px;
-  padding-top: 30px;
   padding-bottom: 60px;
 
   flex-grow:1; 
@@ -21,14 +20,10 @@
   nav {
     margin-left: auto;
     a {
+      color: $text-color;
       display: inline-block;
-      color: #fff;
       text-decoration: none;
       font-size: 36px;
     }
   }
-}
-
-.comments {
-  padding: 50px 50px 0 50px;
 }
