--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,5 +1,5 @@
-$background-color: #333;
+$background-color: #fff;
 $primary-color: #b6d169;
-$text-color: #fff;
+$text-color: #333;
 
 $mobile-width: 500px;
