--- a/layouts/about.html
+++ b/layouts/about.html
@@ -1,21 +1,21 @@
 {{> header}}
 
-    
     <div class="blog-wrapper">
-      <div class="blog">
         <header class="header">
-          <a href="/">Home</a>
-          <nav>
-              <a href="/about">About</a>
-              <a href="/contact">Contact</a>
-          </nav>
+          <div class="container">
+            <a href="/">Frederik Prijck</a>
+            <nav>
+                <a href="about">About</a>
+            </nav>
+          </div>
         </header>
         <main>
-          <!-- todo: move to index.md -->
-          {{ contents }}
+          <div class="container">
+            <!-- todo: move to index.md -->
+            {{ contents }}
+          </div>
         </main>
       </div>
-    </div>
     
 
 {{> footer }}
