--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,19 +2,20 @@
 
     
     <div class="blog-wrapper">
-      <div class="blog">
-        <header class="header">
-          <a href="/">Home</a>
+      <header class="header">
+        <div class="container">
+          <a href="/">Frederik Prijck</a>
           <nav>
               <a href="about">About</a>
-              <a href="about">Contact</a>
           </nav>
-        </header>
-        <main>
+        </div>
+      </header>
+      <main>
+        <div class="container">
           <!-- todo: move to index.md -->
           {{> articles }}
-        </main>
-      </div>
+        </div>
+      </main>
     </div>
     
 
