--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"></script>
     <script>
 
-        var messages = [
+        /*var messages = [
             "Hi<br>",
             "Hi<br><span>I'm <strong>Frederik</strong>, a passionate <strong>JavaScript</strong> developer.</span>",
             "Hi<br><span>I'm <strong>Frederik</strong>, an <strong>Angular, Webpack</strong> and <strong>RxJS</strong> enthousiast.</span>",
@@ -13,7 +13,7 @@
             typeSpeed: 30,
             strings: messages,
             smartBackspace: true
-        });
+        });*/
     </script>
     </body>  
 </html>
