--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,7 @@
 @import 'partials/articles';
 @import 'partials/splash';
 @import 'partials/general';
+@import 'partials/bootstrap-overrides';
 
 html, body { height: 100%; }
 
