--- a/layouts/article.html
+++ b/layouts/article.html
@@ -1,19 +1,20 @@
 {{> header}}
 
     <div class="blog-wrapper">
-      <div class="blog">
         <header class="header">
-          <a href="/">Home</a>
-          <nav>
-              <a href="/about">About</a>
-              <a href="/contact">Contact</a>
-          </nav>
+          <div class="container">
+            <a href="/">Frederik Prijck</a>
+            <nav>
+                <a href="about">About</a>
+            </nav>
+          </div>
         </header>
         <main>
-          <!-- todo: move to index.md -->
+          <div class="container">
+            <!-- todo: move to index.md -->
           {{> article }}
+          </div>
         </main>
       </div>
-    </div>
 
 {{> footer }}
