--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -1,11 +1,10 @@
 <article class="entry">
     <header class="entry__header">
         <div class="entry__header__title">
-            
-            <h2><a href="{{ path }}">{{ title }}</a></h2>
+            <h2>{{ title }}</h2>
         </div><!-- .entry-header-wrap -->
         <div class="entry__header__meta">
-            by <span class="post-author">{{ author }}</span> on <time class="published" datetime="2017-01-18">{{ date }}</time>
+            <time class="published">{{ date }}</time> - {{ timeToRead }} read.
         </div><!-- .entry-meta -->
     </header>
     <main class="entry__content">
