--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -15,10 +15,10 @@
 
 .entry {
     max-width: 740px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 20px;
-    padding-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     .entry__header {
         margin-bottom: 40px;
