--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -6,7 +6,6 @@
 
 
 .blog {
-  max-width: 1200px;
   padding-bottom: 60px;
 
   flex-grow:1; 
@@ -16,14 +15,26 @@
 }
 
 .header {
-  display: flex;
+  width: 100%;
+
+  > .container {
+    display: flex;
+  }
+
+  a {
+    color: $text-color;
+    text-decoration: none;
+    font-size: 36px;
+  }
+
   nav {
     margin-left: auto;
     a {
-      color: $text-color;
       display: inline-block;
-      text-decoration: none;
-      font-size: 36px;
     }
   }
+}
+
+main {
+  width: 100%;
 }
