--- a/layouts/partials/articles.html
+++ b/layouts/partials/articles.html
@@ -7,7 +7,7 @@
                     <h2><a href="{{ path }}">{{ title }}</a></h2>
                 </div><!-- .entry-header-wrap -->
                 <div class="entry__header__meta">
-                    by <span class="post-author">{{ author }}</span> on <time class="published" datetime="2017-01-18">{{ date }}</time>
+                    <time class="published" datetime="2017-01-18">{{ date }}</time>
                 </div><!-- .entry-meta -->
             </header>
             <main class="entry__content">
