--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,17 +1,20 @@
 {{> header}}
-    
-    <div class="blog-wrapper">
-      <header class="header">
-        <div class="container">
-          <a href="/">Frederik Prijck</a>
-        </div>
-      </header>
-      <main>
-        <div class="container">
-          <!-- todo: move to index.md -->
-          {{> articles }}
-        </div>
-      </main>
+  <header class="header">
+    <div class="card">
+      <div class="card-body">
+        Frederik Prijck
+      </div>
     </div>
+  </header>
+
+  <div class="blog-wrapper">
+    
+    <main>
+      <div class="container">
+        <!-- todo: move to index.md -->
+        {{> articles }}
+      </div>
+    </main>
+  </div>
 
 {{> footer }}
