--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,5 +1,7 @@
 $background-color: #fff;
-$primary-color: #b6d169;
+$primary-color: #ed4f50;
+$secondary-color: #2b3a4c;
 $text-color: #333;
 
 $mobile-width: 500px;
+
