--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,2 +1,21 @@
+      <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <span>© 2018 Frederik Prijck</span>
+            </div>
+            <div class="col-md-6">
+                <div class="pull-right">
+                  <a href="">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </footer>
     </body>  
 </html>
