--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -6,18 +6,50 @@
 
 .header {
   width: 100%;
-
-  > .container {
-    display: flex;
-  }
-
+  height: 100%;
   a {
     color: $text-color;
     text-decoration: none;
     font-size: 36px;
   }
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
   width: 100%;
+}
+
+.page-footer {
+  background-color: $secondary-color;
+  color: #fff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  
+  span {
+    font-weight: 100;
+    letter-spacing: 0.1em;
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+
+  a {
+    color: #fff;
+    margin-left: 5px;
+    margin-right: 5px;
+
+    i {
+      font-size: 1.5em;
+    }
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  i:hover {
+    color: $primary-color;
+  }
 }
