--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,15 @@
-      <footer class="page-footer">
+      <footer class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-6">
               <span>© 2018 Frederik Prijck</span>
             </div>
-            <div class="col-md-6">
+            <div class="col-6">
                 <div class="pull-right">
-                  <a href="">
+                  <a href="https://twitter.com/frederikprijck">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="">
+                  <a href="https://github.com/frederikprijck">
                     <i class="fa fa-github" aria-hidden="true"></i>
                   </a>
                 </div>
