--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,9 @@
 @import 'partials/variables';
 @import 'partials/articles';
+@import 'partials/footer';
+@import 'partials/navbar';
 @import 'partials/general';
 @import 'partials/bootstrap-overrides';
-
-html, body { height: 100%; }
 
 body {
   background-color: $background-color;
