--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
   <main class="content">
     <div class="container">
       <!-- todo: move to index.md -->
-      {{> article }}
+      {{> articles }}
     </div>
   </main>
 
