--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -1,8 +1,13 @@
 .entry {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  &:not(:first-child) {
+    margin-top: 20px;
+    padding-top: 20px;
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
 
   .entry__header {
     margin-bottom: 40px;
@@ -38,6 +43,10 @@
     font-size: 11px;
     margin-top: 30px;
 
+    .comments {
+      margin-top: 20px;
+    }
+
     .tag-links {
       border-top: 2px solid #ededed;
       padding-top: 30px;
@@ -52,7 +61,7 @@
         padding: 3px 10px;
 
         &:hover {
-          background-color: #ed4f50;
+          background-color: $primary-color;
           color: #fff;
         }
       }
@@ -64,7 +73,7 @@
   margin-top: 40px;
 
   .more-link {
-    background-color: #2b3a4c;
+    background-color: $secondary-color;
     font-size: 12px;
     letter-spacing: 1;
     text-transform: uppercase;
@@ -74,7 +83,7 @@
     text-decoration: none;
 
     &:hover {
-      background-color: #ed4f50;
+      background-color: $primary-color;
     }
   }
 }
