--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -1,55 +1,8 @@
-.blog-wrapper {
-  display: flex; 
-  flex-direction: column;
-  align-items: center;
-}
-
-.header {
-  width: 100%;
-  height: 100%;
-  a {
-    color: $text-color;
-    text-decoration: none;
-    font-size: 36px;
-  }
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+main.content {
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 main {
   width: 100%;
-}
-
-.page-footer {
-  background-color: $secondary-color;
-  color: #fff;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  
-  span {
-    font-weight: 100;
-    letter-spacing: 0.1em;
-    font-size: 12px;
-    text-transform: uppercase;
-  }
-
-  a {
-    color: #fff;
-    margin-left: 5px;
-    margin-right: 5px;
-
-    i {
-      font-size: 1.5em;
-    }
-
-    &:hover {
-      text-decoration: none;
-    }
-  }
-
-  i:hover {
-    color: $primary-color;
-  }
 }
