--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -2,8 +2,8 @@
 	<div id="disqus_thread"></div>
 	<script>
 		var disqus_config = function () {
-			this.page.url = '{{ permalink }}';
-			this.page.identifier = '{{ slug }}';
+			//this.page.url = '{{ path }}';
+			//this.page.identifier = '{{ path }}';
 		};
 		(function() {
 			var d = document, s = d.createElement('script');
