--- a/src/scss/partials/_articles.scss
+++ b/src/scss/partials/_articles.scss
@@ -1,4 +1,4 @@
-.entry {
+.article {
   &:not(:first-child) {
     margin-top: 20px;
     padding-top: 20px;
@@ -9,10 +9,10 @@
     padding-bottom: 20px;
   }
 
-  .entry__header {
+  .article__header {
     margin-bottom: 40px;
 
-    .entry__header__title h2 {
+    .article__header__title h2 {
       display: inline-block;
       margin-left: 0;
       margin-top: 0;
@@ -25,7 +25,7 @@
       }
     }
 
-    .entry__header__meta {
+    .article__header__meta {
       text-transform: uppercase;
       letter-spacing: 1;
       display: inline-block;
@@ -33,12 +33,12 @@
     }
   }
 
-  .entry__content {
+  .article__content {
     font-size: 18px;
     padding-bottom: 18px;
   }
 
-  .entry__footer {
+  .article__footer {
     text-transform: uppercase;
     font-size: 11px;
     margin-top: 30px;
