--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,33 @@
 {{> header}}
 {{> navbar }}
 
-  <main class="content">
+<main class="content">
     <div class="container">
-      <!-- todo: move to index.md -->
-      {{> articles }}
+        <div class="entries">
+            {{#each articles }}
+                <article class="article">
+                    <header class="article__header">
+                        <div class="article__header__title">
+                            <h2><a href="{{ path }}">{{ title }}</a></h2>
+                        </div>
+                        <div class="article__header__meta">
+                            <time class="published" datetime="2017-01-18">{{ date }}</time>
+                        </div>
+                    </header>
+                    <main class="article__content">
+                        {{{ excerpt }}}
+                    </main>
+                    <footer class="article__footer">
+                        <div class="tag-links">
+                            Tags: 
+                            {{#each tags}}
+                            <a rel="tag">{{ . }} </a>
+                            {{/each}}
+                        </div>
+                    </footer>
+                </article>
+            {{/each}}
+        </div>
     </div>
   </main>
 
