--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -17,5 +17,14 @@
           </div>
         </div>
       </footer>
-    </body>  
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29378163-7"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-29378163-7');
+      </script>
+      </body>
 </html>
