--- a/layouts/partials/header.hbs
+++ b/layouts/partials/header.hbs
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/themes/prism.min.css" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">    
-    <link rel="stylesheet" href="http://localhost:8081/css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
