--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -5,23 +5,23 @@
     <div class="container">
         <div class="entries">
             {{#each articles }}
-                <article class="article">
-                    <header class="article__header">
-                        <div class="article__header__title">
+                <article class="o-article">
+                    <header class="o-article__header">
+                        <div class="o-article__header__title">
                             <h2><a href="{{ path }}">{{ title }}</a></h2>
                         </div>
-                        <div class="article__header__meta">
+                        <div class="o-article__header__meta">
                             <time class="published" datetime="2017-01-18">{{ date }}</time>
                         </div>
                     </header>
-                    <main class="article__content">
+                    <main class="o-article__content">
                         {{{ excerpt }}}
                     </main>
-                    <footer class="article__footer">
+                    <footer class="o-article__footer">
                         <div class="tag-links">
                             Tags: 
                             {{#each tags}}
-                            <a rel="tag">{{ . }} </a>
+                            <a rel="tag" class="a-badge">{{ . }} </a>
                             {{/each}}
                         </div>
                     </footer>
