--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -1,4 +1,4 @@
-      <footer class="footer">
+      <footer class="o-footer">
         <div class="container">
           <div class="row">
             <div class="col-8">
