--- a/layouts/partials/navbar.hbs
+++ b/layouts/partials/navbar.hbs
@@ -1,9 +1,9 @@
-<nav class="navbar">
+<nav class="navbar o-navbar">
   <div class="container justify-content-between flex-md-row">
-    <div class="header__logo">
+    <div class="o-navbar__logo">
       <a href="/">Frederik Prijck</a>
     </div>
-    <div class="header__side">
+    <div class="o-navbar__side">
     </div>
   </div>
 </nav>
