--- a/src/scss/components/molecules/_m-floating-menu.scss
+++ b/src/scss/components/molecules/_m-floating-menu.scss
@@ -2,5 +2,10 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 125px;
+    width: 75px;
+    text-align: center;
+
+    > div:not(:last-of-type) {
+        margin-bottom: 5px;
+    }
 }
