chore(pages): add about and contact placeholder

--- a/layouts/partials/navbar.hbs
+++ b/layouts/partials/navbar.hbs
@@ -4,6 +4,8 @@
       <a href="/">Frederik Prijck</a>
     </div>
     <div class="o-navbar__side">
+      <a href="/about" class="a-link">About</a>
+      <a href="/contact" class="a-link">Contact</a>
     </div>
   </div>
 </nav>
