--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,5 +1,7 @@
 @import 'atoms/a-badge';
 @import 'atoms/a-button';
+@import 'atoms/a-input';
+@import 'atoms/a-link';
 @import 'organisms/o-article';
 @import 'organisms/o-footer';
 @import 'organisms/o-navbar';
