chore(article): add floating menu

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -2,6 +2,7 @@
 @import 'atoms/a-button';
 @import 'atoms/a-input';
 @import 'atoms/a-link';
+@import 'molecules/m-floating-menu';
 @import 'organisms/o-article';
 @import 'organisms/o-footer';
 @import 'organisms/o-navbar';
