chore(tags): make tags clickable and navigate to tags page

--- a/_layouts/article.hbs
+++ b/_layouts/article.hbs
@@ -19,7 +19,7 @@
               <div class="tag-links">
                   Tags: 
                   {{#each tags}}
-                  <a rel="tag" class="a-badge">{{ . }} </a>
+                    <a href="/tags/{{slug}}" rel="tag" class="a-badge">{{ name }} </a>
                   {{/each}}
               </div>
       
