--- a/_layouts/tags.hbs
+++ b/_layouts/tags.hbs
@@ -4,7 +4,7 @@
 <main class="content">
     <div class="container">
         <div class="entries">
-            {{#each articles }}
+            {{#each pagination.files }}
                 <article class="o-article">
                     <header class="o-article__header">
                         <div class="o-article__header__title">
